<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<org.landroo.textreader.ScrollChange
	    android:id="@+id/imgScroller"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:scrollbars="vertical" >
	    
		<ImageView
		    android:id="@+id/imgText"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:src="@drawable/hourglass" 
		    android:contentDescription="@string/textImageView"/>

	</org.landroo.textreader.ScrollChange>
	
	 <RelativeLayout android:id="@+id/zoombuttons"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_gravity="bottom"
		    android:layout_marginBottom="10dip"
		    android:baselineAligned="true"
		    android:orientation="horizontal" >

		    <ImageView
		        android:id="@+id/prew"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dip"
		        android:layout_weight="1"
		        android:contentDescription="@string/prew"
		        android:src="@drawable/back1" />

		    <ImageView
		        android:id="@+id/forw"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dip"
		        android:layout_weight="1"
		        android:contentDescription="@string/next"
		        android:src="@drawable/forw1" />

		    <ImageView
		        android:id="@+id/speak"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dip"
		        android:layout_weight="1"
		        android:contentDescription="@string/speak"
		        android:src="@drawable/sound1" />
		    
		    <ImageView
		        android:id="@+id/find"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right"
		        android:layout_weight="1"
		        android:contentDescription="@string/find"
		        android:src="@drawable/search1" />
		</LinearLayout>
    		
  	</RelativeLayout>
	
</RelativeLayout>